# enersense

./: .gitignore  CMakeLists.txt
firmware/common/src/mqtt/: mqtt_app.c
firmware/common/src/network/: wifi.c  wifi.h
firmware/common/src/sensor/: dht22.c  dht22.h
main/: CMakeLists.txt  main.c
main/mqtt/: mqtt_app.c  mqtt_app.h
main/sensor/: dht22.c
